# replicated-log

./: CMakeLists.txt  LICENSE  README.md
cucumber/: .gitignore  README.md  build_nodes.sh  clean_nodes.sh  docker-compose.yml  download_third_party.sh  run-replicated-log.sh  setup.sh
cucumber/common/cmake/: mif.cmake
cucumber/common/countdown_latch/include/countdown_latch/: countdown_latch.h
cucumber/common/replicated_log_node/include/replicated_log_node/: node_health_checher.h  replicated_log_master.h  replicated_log_node.h  replicated_log_secondary.h  secondary.h
cucumber/common/replicated_log_node/src/: node_health_checher.cpp  replicated_log_master.cpp  replicated_log_node.cpp  replicated_log_secondary.cpp  secondary.cpp
cucumber/master/: CMakeLists.txt  Dockerfile  README.md  make_docker.sh
cucumber/master/src/: main.cpp
cucumber/master/src/main/java/org/example/: MessageDto.java  UrlUtils.java
cucumber/secondary/: CMakeLists.txt  Dockerfile  README.md  make_docker.sh
cucumber/secondary/src/: main.cpp
master_node/: Dockerfile  README.md  build.gradle  docker-compose.yml  init.sh  settings.gradle
master_node/src/main/java/org/example/: JsonUtils.java  NotificationService.java  Request.java  Response.java  RootHandler.java  SimpleHttpServer.java
rudenko/secondary/src/: httplib.h  main.cpp
